8371093: Assert "section header string table should be loaded" failed on debug VM